fix(styles): ensure table caption is displayed correctly in collapsed mode

--- a/projects/oblique/src/styles/scss/core/mixins/_table.scss
+++ b/projects/oblique/src/styles/scss/core/mixins/_table.scss
@@ -1,7 +1,7 @@
 @import "../variables";
 
 @mixin table-collapse() {
-	&, thead, tbody, th, td, tr {
+	&, thead, tbody, th, td, tr, caption {
 		display: block;
 	}
 
